--- a/vendas.html
+++ b/vendas.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página de Vendas</h1>
+    <h1>Vendas</h1>
+    <p>Vendas = R$ 5000,00</P>
     <a href="index.html">Ir para a página de Index</a>
 </body>
 </html>
